Fixed layout issues in header

--- a/style.css
+++ b/style.css
@@ -148,9 +148,9 @@ ul li {
     grid-column: 2 / 3;
 
     display: grid;
-    row-gap: 15px;
+    /* row-gap: 15px; */
     grid-template-rows: repeat(2, 3fr);
-    grid-template-columns: 6fr 1fr 1fr 1fr;
+    grid-template-columns: 5fr 1fr 1fr 1fr;
     padding-inline: 20px;
     box-shadow: 1px 5px 5px 1px rgba(0, 0, 0, 0.1);
     z-index: 1;
@@ -180,18 +180,22 @@ ul li {
 }
 
 .user-container {
-    grid-column: 2 / 5;
+    grid-column: 3 / 5;
 
     /* border: 1px solid red;    */
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-evenly;
     align-items: center;
     padding: 10px;
 }
 
-.bell img,
-.user-icon img {
+.bell img {
     width: 35px;
+    margin-inline: 10px;
+}
+
+.user-icon img {
+    width: 40px;
     margin-inline: 10px;
 }
 
@@ -226,7 +230,7 @@ ul li {
 }
 
 .button-container {
-    grid-column: 2 / 5;
+    grid-column: 3 / 5;
     grid-row: 2 / 3;
 
     display: flex;
@@ -267,7 +271,7 @@ ul li {
     margin-left: 8px;
     padding-top: 20px;
 
-    
+
     /* align-self: flex-end; */
 }
 
